tests/error/compiletime_error_type_mismatch_in_test/identity.nim
func identity*(s: string): string =
  s
